test/soft-contract/ill-typed/flatten.caprice
(* TEST
  include refutable;
*)

(* flatten the input down to just a list of ints and bools *)

let any_type a = mu t.
  | `L of list t
  | `A of a

let rec append a b =
  match a with
  | [] -> b
  | hd :: tl -> hd :: append tl b
  end

let rec flatten (type a_) (x : any_type a_) : list a_ =
  match x with
  | `L [] -> []
  | `L (hd :: tl) -> append (flatten a_ hd) tl (* ERROR: should have `(flatten (`L tl))` instead of `tl` *)
  | `A a -> [ a ]
  end
